kubernetes/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-labs
  labels:
    name: student-labs
